--- a/aoc-rs-template/Cargo.toml
+++ b/aoc-rs-template/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
+reqwest = "0.12.9"
+tokio = { version = "1.41.1", features = ["full"] }
